// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code should render block code correctly (snapshot) 1`] = `
<div>
  <pre
    class="prism-code language-type block"
    style="color: rgb(248, 248, 242); background-color: rgb(40, 42, 54);"
  >
    <div
      class="token-line"
      style="color: rgb(248, 248, 242);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        Block Code
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 1`] = `
<div>
  <pre
    class="prism-code language-markup block"
    style="color: rgb(248, 248, 242); background-color: rgb(40, 42, 54);"
  >
    <div
      class="token-line"
      style="color: rgb(248, 248, 242);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 2`] = `
<div>
  <pre
    class="prism-code language-markup block"
    style="color: rgb(248, 248, 242); background-color: rgb(40, 42, 54);"
  >
    <div
      class="token-line"
      style="color: rgb(248, 248, 242);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 3`] = `
<div>
  <pre
    class="prism-code language-markdown block"
    style="color: rgb(248, 248, 242); background-color: rgb(40, 42, 54);"
  >
    <div
      class="token-line"
      style="color: rgb(248, 248, 242);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 4`] = `
<div>
  <pre
    class="prism-code language-javascript block"
    style="color: rgb(248, 248, 242); background-color: rgb(40, 42, 54);"
  >
    <div
      class="token-line"
      style="color: rgb(248, 248, 242);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token keyword"
        style="color: rgb(189, 147, 249); font-style: italic;"
      >
        const
      </span>
      <span
        class="token plain"
      >
         foo 
      </span>
      <span
        class="token operator"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(80, 250, 123);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 5`] = `
<div>
  <pre
    class="prism-code language-typescript block"
    style="color: rgb(248, 248, 242); background-color: rgb(40, 42, 54);"
  >
    <div
      class="token-line"
      style="color: rgb(248, 248, 242);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token keyword"
        style="color: rgb(189, 147, 249); font-style: italic;"
      >
        const
      </span>
      <span
        class="token plain"
      >
         foo 
      </span>
      <span
        class="token operator"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(80, 250, 123);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 6`] = `
<div>
  <pre
    class="prism-code language-coffeescript block"
    style="color: rgb(248, 248, 242); background-color: rgb(40, 42, 54);"
  >
    <div
      class="token-line"
      style="color: rgb(248, 248, 242);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo 
      </span>
      <span
        class="token operator"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(80, 250, 123);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 7`] = `
<div>
  <pre
    class="prism-code language-objectivec block"
    style="color: rgb(248, 248, 242); background-color: rgb(40, 42, 54);"
  >
    <div
      class="token-line"
      style="color: rgb(248, 248, 242);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token keyword"
        style="color: rgb(189, 147, 249); font-style: italic;"
      >
        const
      </span>
      <span
        class="token plain"
      >
         foo 
      </span>
      <span
        class="token operator"
      >
        =
      </span>
      <span
        class="token plain"
      >
         
      </span>
      <span
        class="token function"
        style="color: rgb(80, 250, 123);"
      >
        bar
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        (
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        )
      </span>
      <span
        class="token punctuation"
        style="color: rgb(248, 248, 242);"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render different language correctly (snapshot) 8`] = `
<div>
  <pre
    class="prism-code language-yaml block"
    style="color: rgb(248, 248, 242); background-color: rgb(40, 42, 54);"
  >
    <div
      class="token-line"
      style="color: rgb(248, 248, 242);"
    >
      <span
        class="line-number"
      >
        1
      </span>
      <span
        class="token plain"
      >
        const foo = bar();
      </span>
    </div>
  </pre>
</div>
`;

exports[`Code should render inline code correctly (snapshot) 1`] = `
<div>
  <code
    class="inline"
  >
    Inline Code
  </code>
</div>
`;
